--- a/conf/neo4j-server.properties
+++ b/conf/neo4j-server.properties
@@ -30,6 +30,8 @@ org.neo4j.server.webadmin.management.uri=/db/manage/
 
 # Low-level graph engine tuning file
 org.neo4j.server.db.tuning.properties=conf/neo4j.properties
+org.neo4j.server.webserver.address=0.0.0.0
+org.neo4j.server.webserver.https.enabled=tr
 
 
 #Comma separated list of JAXRS packages contains JAXRS Resoruce, one package name for each mountpoint.
